--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			<img class="img-responsive" src="xivlogo.png" alt="FF-XIV Logo" style="width:auto%">
 		</div>
 		<p>Esta pagina web tiene como proposito almacenar cierta informacion del videojuego Final Fantasy XIV desarrollado
-		 por Square Enix para la consolo PS4 y PC.</p> 
+		 por Square Enix para la consola PS4 y PC.</p> 
 		 
 		<p>Desde el lanzamiento de Final Fantasy XIV, en 2010, el juego tuvo un impacto negativo tanto en los jugadores como 
 		 en los críticos. A raíz de esto, Square Enix anunció el lanzamiento de FFXIV A Realm Reborn, una nueva versión del 
